With scrollbar issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,6 @@
 		background-color: #f5f5f5;
 		padding-bottom: 1.5rem;
 		min-height: 100vh;
-		min-width: 100vw;
 	}
 	.ensuring__navbar {
 		width: 100%;
@@ -584,7 +583,6 @@
 		background-color: #f5f5f5;
 		padding-bottom: 1.5rem;
 		min-height: 100vh;
-		min-width: 100vw;
 	}
 	.start-assessment__navbar {
 		width: 100%;
